infra/k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: lifehub-backend-service
spec:
  selector:
    app: lifehub-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
