infra/k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: lifehub-frontend-service
spec:
  selector:
    app: lifehub-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
